# nbodysim

./: AUTHORS  README.md  TODO  pyproject.toml
docs/: bibliography.yaml  report.typ
scripts/: i18n.sh
src/nbodysim/: __init__.py  __main__.py  env.py  kernel.cu  log.py  loop.py  object.py  simulator.py
src/nbodysim/backend/: __init__.py  cpu.py  gpu.py
src/nbodysim/kernels/: kernel.cu
tests/: test_backend_cpu.py  test_backend_gpu.py  test_loop.py  test_object.py
