[project]
authors = [{name = "João Augusto Costa Branco Marado Torres", email = "torres.dev@disroot.org"}]
dependencies = []
name = "nbodysim"
requires-python = ">= 3.12"
description = "N-body simulation"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
keywords = ["HPC"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Environment :: GPU :: NVIDIA CUDA",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Physics"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/Marado-Programmer/nbodysim"
# Documentation = "https://readthedocs.org"
Repository = "https://github.com/Marado-Programmer/nbodysim.git"
Issues = "https://github.com/Marado-Programmer/nbodysim/issues"
Changelog = "https://github.com/Marado-Programmer/nbodysim/blob/master/CHANGELOG.md"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.version]
path = "src/nbodysim/__init__.py"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
nbodysim = { path = ".", editable = true }

[tool.pixi.tasks]
i18n-extract = "./scripts/i18n.sh"
fmt = "ruff"
lint = "pylint"

[tool.pixi.dependencies]
numpy = ">=2.4.3,<3"
pycuda = ">=2025.1.2,<2026"
matplotlib = ">=3.10.8,<4"

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.pixi.feature.test.tasks]
test = "pytest"

[dependency-groups]
test = ["pytest"]
